--- a/mail_server_multicompany/views/ir_mail_server.xml
+++ b/mail_server_multicompany/views/ir_mail_server.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<openerp>
-	<data>
+<odoo>
+	<record id="ir_mail_server_form" model="ir.ui.view">
+		<field name="name">ir_mail_server_form_company</field>
+		<field name="model">ir.mail_server</field>
+		<field name="inherit_id" ref="base.ir_mail_server_form" />
+		<field name="arch" type="xml">
 
-		<record id="ir_mail_server_form" model="ir.ui.view">
-			<field name="name">ir_mail_server_form_company</field>
-			<field name="model">ir.mail_server</field>
-			<field name="inherit_id" ref="base.ir_mail_server_form" />
-			<field name="arch" type="xml">
-
-				<field name="name" position="after">
-					<field name="company" />
-				</field>
-
+			<field name="name" position="after">
+				<field name="company_id" />
 			</field>
-		</record>
 
-	</data>
-</openerp>
+		</field>
+	</record>
+</odoo>
